package imservice

import "github.com/cherish-chat/xxim-server/common/pb"

type CommonResp = pb.CommonResp
type KickUserConnReq = pb.KickUserConnReq
type KickUserConnResp = pb.KickUserConnResp
type GetUserConnReq = pb.GetUserConnReq
type GetUserConnResp = pb.GetUserConnResp
type SendMsgReq = pb.SendMsgReq
type SendMsgResp = pb.SendMsgResp
